[gd_scene load_steps=17 format=3 uid="uid://bvyvojr61jtcl"]

[ext_resource type="Script" path="res://start.gd" id="1_3sfjm"]
[ext_resource type="Texture2D" uid="uid://cgt8guxmo4jhg" path="res://assets/background_menu.png" id="1_25ehs"]
[ext_resource type="Texture2D" uid="uid://bwrirb7d0gpjv" path="res://assets/logo.png" id="2_tdvmf"]
[ext_resource type="Texture2D" uid="uid://cn6a5hm7tjdey" path="res://assets/button_jogar.png" id="3_h03kq"]
[ext_resource type="Texture2D" uid="uid://0rxjyo38c8mf" path="res://assets/button_opcao.png" id="4_8gtam"]
[ext_resource type="Script" path="res://jogar.gd" id="4_s88ll"]
[ext_resource type="Texture2D" uid="uid://b7hq8s86nudxh" path="res://assets/button_pontuacao.png" id="5_g4354"]
[ext_resource type="Script" path="res://opcoes.gd" id="6_copsi"]
[ext_resource type="Texture2D" uid="uid://b2wu0ee7qpm4w" path="res://assets/button_sobre.png" id="6_iifqs"]
[ext_resource type="Texture2D" uid="uid://cpy3uw1806nco" path="res://assets/button_sair.png" id="7_x0sdy"]
[ext_resource type="Script" path="res://pontuacao.gd" id="8_yt6f8"]
[ext_resource type="Script" path="res://sobre.gd" id="10_lk46j"]
[ext_resource type="Script" path="res://sair.gd" id="12_kfe1q"]
[ext_resource type="AudioStream" uid="uid://mvecijvr27qx" path="res://audio/menuSelect.wav" id="14_ucsgu"]
[ext_resource type="AudioStream" uid="uid://dayihv64gk6d7" path="res://audio/click.wav" id="15_65ogg"]
[ext_resource type="AudioStream" uid="uid://db22q3h5brdsx" path="res://audio/menuMusic.mp3" id="16_txhy4"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3sfjm")

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 900.0
texture = ExtResource("1_25ehs")
expand_mode = 1

[node name="VBox1" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = -435.5
offset_right = 313.0
offset_bottom = 435.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(300, 400)
theme_override_constants/separation = 100
alignment = 1

[node name="logo" type="TextureRect" parent="VBox1"]
layout_mode = 2
texture = ExtResource("2_tdvmf")

[node name="HBox1" type="HBoxContainer" parent="VBox1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="VBox2" type="VBoxContainer" parent="VBox1/HBox1"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="jogar" type="TextureButton" parent="VBox1/HBox1/VBox2" groups=["buttons"]]
layout_mode = 2
texture_normal = ExtResource("3_h03kq")
script = ExtResource("4_s88ll")

[node name="opcoes" type="TextureButton" parent="VBox1/HBox1/VBox2" groups=["buttons"]]
layout_mode = 2
texture_normal = ExtResource("4_8gtam")
script = ExtResource("6_copsi")

[node name="pontuacao" type="TextureButton" parent="VBox1/HBox1/VBox2" groups=["buttons"]]
layout_mode = 2
texture_normal = ExtResource("5_g4354")
script = ExtResource("8_yt6f8")

[node name="sobre" type="TextureButton" parent="VBox1/HBox1/VBox2" groups=["buttons"]]
layout_mode = 2
texture_normal = ExtResource("6_iifqs")
script = ExtResource("10_lk46j")

[node name="sair" type="TextureButton" parent="VBox1/HBox1/VBox2" groups=["buttons"]]
layout_mode = 2
texture_normal = ExtResource("7_x0sdy")
script = ExtResource("12_kfe1q")

[node name="selectAudio" type="AudioStreamPlayer" parent="VBox1/HBox1/VBox2"]
stream = ExtResource("14_ucsgu")

[node name="clickAudio" type="AudioStreamPlayer" parent="VBox1/HBox1/VBox2"]
stream = ExtResource("15_65ogg")

[node name="menuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_txhy4")
volume_db = -20.0

[connection signal="mouse_entered" from="VBox1/HBox1/VBox2/jogar" to="VBox1/HBox1/VBox2/jogar" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBox1/HBox1/VBox2/jogar" to="VBox1/HBox1/VBox2/jogar" method="_on_mouse_exited"]
[connection signal="pressed" from="VBox1/HBox1/VBox2/jogar" to="VBox1/HBox1/VBox2/jogar" method="_on_pressed"]
[connection signal="mouse_entered" from="VBox1/HBox1/VBox2/opcoes" to="VBox1/HBox1/VBox2/opcoes" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBox1/HBox1/VBox2/opcoes" to="VBox1/HBox1/VBox2/opcoes" method="_on_mouse_exited"]
[connection signal="pressed" from="VBox1/HBox1/VBox2/opcoes" to="VBox1/HBox1/VBox2/opcoes" method="_on_pressed"]
[connection signal="mouse_entered" from="VBox1/HBox1/VBox2/pontuacao" to="VBox1/HBox1/VBox2/pontuacao" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBox1/HBox1/VBox2/pontuacao" to="VBox1/HBox1/VBox2/pontuacao" method="_on_mouse_exited"]
[connection signal="pressed" from="VBox1/HBox1/VBox2/pontuacao" to="VBox1/HBox1/VBox2/pontuacao" method="_on_pressed"]
[connection signal="mouse_entered" from="VBox1/HBox1/VBox2/sobre" to="VBox1/HBox1/VBox2/sobre" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBox1/HBox1/VBox2/sobre" to="VBox1/HBox1/VBox2/sobre" method="_on_mouse_exited"]
[connection signal="pressed" from="VBox1/HBox1/VBox2/sobre" to="VBox1/HBox1/VBox2/sobre" method="_on_pressed"]
[connection signal="mouse_entered" from="VBox1/HBox1/VBox2/sair" to="VBox1/HBox1/VBox2/sair" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBox1/HBox1/VBox2/sair" to="VBox1/HBox1/VBox2/sair" method="_on_mouse_exited"]
[connection signal="pressed" from="VBox1/HBox1/VBox2/sair" to="VBox1/HBox1/VBox2/sair" method="_on_pressed"]
